Fix spacing issues on mobile; add new section styles; add donate section

--- a/themes/dataone/assets/scss/colors.scss
+++ b/themes/dataone/assets/scss/colors.scss
@@ -118,6 +118,8 @@ $c-brand: $cn-teal;
 $c-primary: $cn-yellow;
 $c-secondary: $cn-teal;
 $c-tertiary: $cn-blue;
+$c-quaternary: $cn-green;
+
 // neutral colour
 $c-neutral: $cn-blue-grey;
 // info, warning, success, error colors
