--- a/themes/dataone/layouts/partials/blocks/d1search/d1search.scss
+++ b/themes/dataone/layouts/partials/blocks/d1search/d1search.scss
@@ -120,8 +120,8 @@
     }
   
     .d1search__input:placeholder-shown~.d1search__label{
-      top: 27px;
-      font-size: 1rem;
+      top: 29px;
+      font-size: 0.9rem;
     }
     
     .d1search__input:focus~.d1search__label{
