--- a/themes/dataone/layouts/partials/blocks/global-footer/global-footer.scss
+++ b/themes/dataone/layouts/partials/blocks/global-footer/global-footer.scss
@@ -1,7 +1,5 @@
 .global-footer {
   
-  // background-color: $c-foreground-emphasis;
-  padding: $inter-section-spacing 0 $inter-item-spacing 0;
   margin: 0;
   @include f-common;
   position: relative;
