--- a/themes/dataone/layouts/partials/blocks/header/header.scss
+++ b/themes/dataone/layouts/partials/blocks/header/header.scss
@@ -198,6 +198,7 @@
 // 
 .header--svg-background{
   padding-bottom: 400px;
+  padding-top: 0;
   @include desktop{
     margin-top: 80px;
     padding-bottom: 0;
@@ -248,14 +249,12 @@
     svg{
       flex: 0 0 auto;
       width: auto;
-      height: 800px;
+      height: 900px;
       margin-left: -234px;
       margin-top: 0;
-      margin-bottom: 800px;
+      padding-bottom: 100px;
       @include desktop{
         margin-left: 0px;
-        // margin-top: -950px;
-        // height: 1750px;
         margin-bottom: 0px;
         margin-top: -1030px;
         height: 1800px;
@@ -367,51 +366,36 @@
       margin-top: 5.5rem;
     }
   }
-  
-  // .header__svg-background{
-  //   z-index: 1;
-  //   svg{
-  //     height: 500px;
-  //     margin-left: 0px;
-  //     margin-top: 0;
-  //     margin-bottom: 0px;
-  //     @include desktop{
-  //       margin-top: 4rem;
-  //       margin-left: 0px;
-  //       height: 625px;
-  //       margin-bottom: 0px;
-  //     }
-  //   }
-  // }
+
 }
 
 .header--simple-svg-background{
   @extend .header--svg-background;
   @extend .header--text-only;
-  min-height: 700px;
-  max-height: 750px;
+  padding-bottom: 250px;
   @include desktop{
     margin-top: 70px;
     min-height: 700px;
     max-height: 750px;
   }
-  padding-bottom: 0px;
+  
   
   .header__svg-background{
     svg{
-      height: 800px;
       margin-left: 0px;
-      margin-top: -50px;
-      margin-bottom: 0px;
+    
+      height: 1000px;
       @include desktop{
         margin-top: 0;
         margin-left: 0px;
         height: 800px;
         margin-bottom: 0px;
+        padding-bottom: 0;
       }
     }
   }
 }
+
 
 .header--dark-bkg{
   .header__headline{
